Old/Removed 2026/2026-06-05/AnimationControl.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "AnimationControl.h"
#include "InputStream.h"
#include "ImageSet.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API AnimationControl* AnimationControl_Create_()
{
    return MarshalExceptions<AnimationControl*>([&](){
        return new AnimationControl();
    });
}

ALTERNET_UI_API c_bool AnimationControl_GetUseGeneric_(AnimationControl* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetUseGeneric();
    });
}

ALTERNET_UI_API void AnimationControl_SetUseGeneric_(AnimationControl* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetUseGeneric(value);
    });
}

ALTERNET_UI_API int AnimationControl_GetDelay_(AnimationControl* obj, uint32_t i)
{
    return MarshalExceptions<int>([&](){
        return obj->GetDelay(i);
    });
}

ALTERNET_UI_API void* AnimationControl_GetFrame_(AnimationControl* obj, uint32_t i)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetFrame(i);
    });
}

ALTERNET_UI_API uint32_t AnimationControl_GetFrameCount_(AnimationControl* obj)
{
    return MarshalExceptions<uint32_t>([&](){
        return obj->GetFrameCount();
    });
}

ALTERNET_UI_API SizeI_C AnimationControl_GetSize_(AnimationControl* obj)
{
    return MarshalExceptions<SizeI_C>([&](){
        return obj->GetSize();
    });
}

ALTERNET_UI_API c_bool AnimationControl_IsOk_(AnimationControl* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsOk();
    });
}

ALTERNET_UI_API c_bool AnimationControl_Play_(AnimationControl* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->Play();
    });
}

ALTERNET_UI_API void AnimationControl_Stop_(AnimationControl* obj)
{
    MarshalExceptions<void>([&](){
        obj->Stop();
    });
}

ALTERNET_UI_API c_bool AnimationControl_IsPlaying_(AnimationControl* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsPlaying();
    });
}

ALTERNET_UI_API c_bool AnimationControl_LoadFile_(AnimationControl* obj, const char16_t* filename, int type)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->LoadFile(filename, type);
    });
}

ALTERNET_UI_API c_bool AnimationControl_Load_(AnimationControl* obj, void* stream, int type)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->Load(stream, type);
    });
}

ALTERNET_UI_API void AnimationControl_SetInactiveBitmap_(AnimationControl* obj, ImageSet* bitmapBundle)
{
    MarshalExceptions<void>([&](){
        obj->SetInactiveBitmap(bitmapBundle);
    });
}